# relay

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.zeroclaw  README.md  SECURITY.md  Tiltfile  deep-research-report.md  docker-compose.yml  kubeconfig  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  helm-release.yml  release-please.yml  tests.yml
app/: config.py  health.py  identity.py  logging.py  main.py  metrics.py  types.py
app/bot/: approval.py  commands.py  dialogs.py  formatting.py  plugin.py  runner.py  stream_handler.py
app/k8s/: client.py  config.py  controller.py  lifecycle.py  provisioner.py  reaper.py  runtime.py  skills.py  user_state.py  workspace.py
app/workspace/: IDENTITY.md  SOUL.md
app/zeroclaw/: client.py
charts/ops-agent/: Chart.yaml  values.yaml
charts/ops-agent/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  poddisruptionbudget.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/relay/: Chart.yaml  values.yaml
charts/relay/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  poddisruptionbudget.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/: deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secret.example.yaml  service.yaml
docs/superpowers/plans/: 2026-05-20-agent-ux-feedback.md
docs/superpowers/specs/: 2026-05-29-per-user-model-config-design.md
scripts/: load_test_data.py
tests/: test_commands_token.py  test_config_builder.py  test_identity.py  test_plugin.py  test_runtime.py  test_skills.py  test_workspace.py  test_zeroclaw_client.py
