[project]
name = "ops-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mmpy-bot>=2.2.1",
    "kubernetes>=28.0",
    "websockets>=12.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
]

[project.scripts]
ops-agent = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
