[project]
name = "relay"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
    "mmpy-bot>=2.2.1",
    "kubernetes>=28.0,<36",
    "websockets>=12.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
]

[project.scripts]
relay = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
